--- a/basics-01-starting-code/index.html
+++ b/basics-01-starting-code/index.html
@@ -17,7 +17,7 @@
   </header>
   <section id="user-goal">
     <h2>My Course Goal</h2>
-    <p>{{ courseGoal }}</p>
+    <p>{{ courseGoalA }}</p>
     <p>{{ outputGoal() }}</p>
     <p>Learn more
       <a v-bind:href="vueLink">about Vue</a>.
