--- a/basics-03-events-starting-code/index.html
+++ b/basics-03-events-starting-code/index.html
@@ -20,8 +20,12 @@
     <button v-on:click="add(5)">Add 5</button>
     <button v-on:click="reduce(5)">Remove 5</button>
     <p>Result: {{ counter }}</p>
-    <input type="text" v-on:input="setName">
-    <p>Your Name: {{ name }}</p>
+    <input type="text" v-on:input="setName" v-on:keyup.enter="confirmInput">
+    <p>Your Name: {{ confirmedName }}</p>
+    <form v-on:submit.prevent="submitForm">
+      <input type="text">
+      <button>Sign Up</button>
+    </form>
   </section>
 </body>
 
