--- a/basics-03-events-starting-code/index.html
+++ b/basics-03-events-starting-code/index.html
@@ -19,6 +19,7 @@
     <h2>Events in Action</h2>
     <button v-on:click="add(5)">Add 5</button>
     <button v-on:click="reduce(5)">Remove 5</button>
+    <p v-once>Starting counter: {{ counter }}</p>
     <p>Result: {{ counter }}</p>
     <input type="text" v-on:input="setName" v-on:keyup.enter="confirmInput">
     <p>Your Name: {{ confirmedName }}</p>
