--- a/main-prj-01-starting-setup/public/index.html
+++ b/main-prj-01-starting-setup/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <title>Find a coach</title>
-  <meta name="description" content="Find a coach and grow as a developper!">
+  <meta name="description" content="Find a coach and grow as a web developper!">
 </head>
 
 <body>
